# neptune

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  fsync.yml  go.mod  go.sum  main.go  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  deploy.yml  lint.yml
docker/: Dockerfile  dev.Dockerfile  dev.lint.Dockerfile
pkg/cmd/: root.go  setup.go
pkg/cmd/setup/: ask.go  check.go  make.go  model.go
pkg/cmds/: new.go  root.go
pkg/cmds/new/: file.go  open.go
pkg/conf/: model.go  read.go
pkg/util/: list.go
src/: auth.rs  cli.rs  document.rs  endpoints.rs  main.rs  options.rs  resources.rs  result.rs  rmapi.rs  write.rs  writer.rs
src/cmd/: book_note.rs  daily_log.rs  food_log.rs  mod.rs  note.rs  options_cmd.rs  school_note.rs
src/templates/: mod.rs  note.rs
