[package]
name = "neptune"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["string"] }
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
directories = "4.0.1"
genpdf = { version = "0.2.0", features = ["images"] }
lazy_static = "1.4.0"
open = "5.0.0"
ordinal = "0.3.2"
serde = { version = "1.0.157", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
task_log = "0.1.6"
toml = "0.5.11"
