[package]
name = "neptune"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.4.7", features = ["string"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
genpdf = {version = "0.2.0", features = ["images"]}
lazy_static = "1.4.0"
ordinal = "0.3.2"
serde = { version = "1.0.192", features = ["derive"] }
task_log = "0.1.6"
